fix: use "vh" units instead of "vw" for bottom gap

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ code {
 }
 
 .domain-padding {
-  height: 75vw;
+  height: 75vh;
   display: flex;
   font-size:100px;
   align-items: center;
